kubernetes/apps/rook-ceph/cluster/httproute-dashboard.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  namespace: rook-ceph
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames: ["rook.${SECRET_DOMAIN}"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
